--- a/sneakers/app/views/users/show.html.erb
+++ b/sneakers/app/views/users/show.html.erb
@@ -8,6 +8,10 @@
     <th>When I Bought It</th>
   </tr>
   <!-- hmmm I seem to be forgetting something -->
+  <% @user.shoes.each do |shoe|  %>
+    <%= shoe.brand %>
+    <%= shoe.year %>
+  <% end %>
 </table>
 
 <br>
